# ehsm-util-c

./: CMakeLists.txt  README.MD
include/: cryptoki.h  ehsm-c-util.h
src/: util.c
